--- a/ex.html
+++ b/ex.html
@@ -2,7 +2,7 @@
 <html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
-  <title>تفعيل الإشعارات</title>
+  <title>Allow notifications for messages</title>
   <style>
     body {
       background-color: #fff;
@@ -65,7 +65,7 @@
 
   <div class="extension-box">
     <img src="icon.png" alt="Icon" class="icon">
-    <h1>تفعيل الإشعارات</h1>
+    <h1>Allow notifications for messages</h1>
     <button class="add-button">Add to Chrome</button>
 
     <div class="preview-images">
