--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     }
 
     .container {
-      max-width: 900px;
+      max-width: 1000px;
       margin: auto;
       padding: 40px 20px;
     }
@@ -42,6 +42,7 @@
 
     .info p {
       color: #555;
+      line-height: 1.5;
     }
 
     .icon {
@@ -60,6 +61,7 @@
       cursor: pointer;
       margin-top: 20px;
       box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+      transition: background-color 0.2s ease;
     }
 
     .add-button:hover {
@@ -67,28 +69,43 @@
     }
 
     .previews {
-      margin-top: 40px;
+      margin-top: 50px;
       display: flex;
       justify-content: center;
-      gap: 20px;
+      gap: 30px;
       flex-wrap: wrap;
     }
 
     .previews img {
-      width: 300px;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.08);
+      width: 450px;
+      max-width: 100%;
+      border-radius: 12px;
+      box-shadow: 0 0 12px rgba(0,0,0,0.1);
+      transition: transform 0.2s ease;
     }
 
-    @media (max-width: 600px) {
+    .previews img:hover {
+      transform: scale(1.03);
+    }
+
+    @media (max-width: 768px) {
       .header {
         flex-direction: column;
         align-items: center;
+        text-align: center;
       }
 
       .info {
         margin-left: 0;
-        text-align: center;
+      }
+
+      .previews {
+        flex-direction: column;
+        gap: 20px;
+      }
+
+      .previews img {
+        width: 90%;
       }
     }
   </style>
