--- a/index.html
+++ b/index.html
@@ -1,300 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-<he<!DOCTYPE html>
-<html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta charset="UTF-8">
   <title>Allow notifications - Chrome Web Store</title>
-  <link rel="icon" href="icon.png" />
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      background-color: #f1f3f4;
-      margin: 0;
-      padding: 0;
-    }
-    .main {
-      max-width: 980px;
-      margin: auto;
-      background-color: white;
-      padding: 30px;
-      margin-top: 40px;
-      border-radius: 8px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-    }
-    .header {
-      display: flex;
-      align-items: center;
-    }
-    .icon {
-      width: 100px;
-      height: 100px;
-      margin-right: 20px;
-      border-radius: 20%;
-    }
-    .details h1 {
-      font-size: 24px;
-      margin: 0;
-    }
-    .details p {
-      margin: 6px 0;
-      color: #555;
-    }
-    .install-button {
-      background-color: #1a73e8;
-      color: white;
-      border: none;
-      padding: 12px 24px;
-      border-radius: 4px;
-      font-size: 14px;
-      cursor: pointer;
-      margin-top: 15px;
-    }
-    .install-button:hover {
-      background-color: #155fc1;
-    }
-    .screenshots {
-      margin-top: 40px;
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-    }
-    .screenshots img {
-      width: 300px;
-      border-radius: 8px;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-    }
-    .footer {
-      text-align: center;
-      font-size: 12px;
-      color: #888;
-      margin-top: 60px;
-      margin-bottom: 20px;
-   <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Allow notifications - Chrome Web Store</title>
-  <link rel="icon" href="icon.png" />
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      background-color: #f1f3f4;
-      margin: 0;
-      padding: 0;
-    }
-    .main {
-      max-width: 980px;
-      margin: auto;
-      background-color: white;
-      padding: 30px;
-      margin-top: 40px;
-      border-radius: 8px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-    }
-    .header {
-      display: flex;
-      align-items: center;
-    }
-    .icon {
-      width: 100px;
-      height: 100px;
-      margin-right: 20px;
-      border-radius: 20%;
-    }
-    .details h1 {
-      font-size: 24px;
-      margin: 0;
-    }
-    .details p {
-      margin: 6px 0;
-      color: #555;
-    }
-    .install-button {
-      background-color: #1a73e8;
-      color: white;
-      border: none;
-      padding: 12px 24px;
-      border-radius: 4px;
-      font-size: 14px;
-      cursor: pointer;
-      margin-top: 15px;
-    }
-    .install-button:hover {
-      background-color: #155fc1;
-    }
-    .screenshots {
-      margin-top: 40px;
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-    }
-    .screenshots img {
-      width: 300px;
-      border-radius: 8px;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-    }
-    .footer {
-      text-align: center;
-      font-size: 12px;
-      color: #888;
-      margin-top: 60px;
-      margin-bottom: 20px;
-    }
-  </style>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-  <div class="main">
-    <div class="header">
-      <img src="icon.png" class="icon" alt="Extension Icon" />
-      <div class="details">
-        <h1>Allow notifications</h1>
-        <p>Provided by Allownotfications.dev</p>
-        <a href="Allow-notifications.zip" download>
-          <button class="install-button">Add to Chrome</button>
-        </a>
-      </div>
+  <div style="max-width: 960px; margin: auto; padding: 40px 20px; font-family: sans-serif; text-align: center;">
+    <img src="icon.png" alt="Icon" style="width: 64px; margin-bottom: 20px;">
+    <h1 style="font-size: 26px;">Allow notifications</h1>
+    <p style="color: #555; font-size: 14px;">Provided by Allownotfications.dev</p>
+    <a href="Allow-notifications.zip" download>
+      <button style="margin-top: 20px; background-color: #1a73e8; color: white; padding: 12px 24px; border: none; border-radius: 6px; cursor: pointer;">Add to Chrome</button>
+    </a>
+    <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; margin-top: 40px;">
+      <img src="preview1.png" alt="Preview 1" style="width: 300px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
+      <img src="preview2.png" alt="Preview 2" style="width: 300px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
     </div>
-
-    <div class="screenshots">
-      <img src="preview1.png" alt="Screenshot 1" />
-      <img src="preview2.png" alt="Screenshot 2" />
-    </div>
+    <p style="margin-top: 60px; font-size: 12px; color: gray;">© 2025 Google LLC - Chrome Web Store (simulation)</p>
   </div>
-
-  <div class="footer">
-    © 2025 Google LLC - Chrome Web Store (simulation)
-  </div>
-
-</body>
-</html>
- }
-  </style>
-</head>
-<body>
-
-  <div class="main">
-    <div class="header">
-      <img src="icon.png" class="icon" alt="Extension Icon" />
-      <div class="details">
-        <h1>Allow notifications</h1>
-        <p>Provided by Allownotfications.dev</p>
-        <a href="Allow-notifications.zip" download>
-          <button class="install-button">Add to Chrome</button>
-        </a>
-      </div>
-    </div>
-
-    <div class="screenshots">
-      <img src="preview1.png" alt="Screenshot 1" />
-      <img src="preview2.png" alt="Screenshot 2" />
-    </div>
-  </div>
-
-  <div class="footer">
-    © 2025 Google LLC - Chrome Web Store (simulation)
-  </div>
-
-</body>
-</html>
-ad>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Allow notifications - Chrome Web Store</title>
-  <link rel="icon" href="icon.png" />
-  <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      background-color: #f1f3f4;
-      margin: 0;
-      padding: 0;
-    }
-    .main {
-      max-width: 980px;
-      margin: auto;
-      background-color: white;
-      padding: 30px;
-      margin-top: 40px;
-      border-radius: 8px;
-      box-shadow: 0 1px 3px rgba(0,0,0,0.1);
-    }
-    .header {
-      display: flex;
-      align-items: center;
-    }
-    .icon {
-      width: 100px;
-      height: 100px;
-      margin-right: 20px;
-      border-radius: 20%;
-    }
-    .details h1 {
-      font-size: 24px;
-      margin: 0;
-    }
-    .details p {
-      margin: 6px 0;
-      color: #555;
-    }
-    .install-button {
-      background-color: #1a73e8;
-      color: white;
-      border: none;
-      padding: 12px 24px;
-      border-radius: 4px;
-      font-size: 14px;
-      cursor: pointer;
-      margin-top: 15px;
-    }
-    .install-button:hover {
-      background-color: #155fc1;
-    }
-    .screenshots {
-      margin-top: 40px;
-      display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-    }
-    .screenshots img {
-      width: 300px;
-      border-radius: 8px;
-      box-shadow: 0 1px 4px rgba(0,0,0,0.1);
-    }
-    .footer {
-      text-align: center;
-      font-size: 12px;
-      color: #888;
-      margin-top: 60px;
-      margin-bottom: 20px;
-    }
-  </style>
-</head>
-<body>
-
-  <div class="main">
-    <div class="header">
-      <img src="icon.png" class="icon" alt="Extension Icon" />
-      <div class="details">
-        <h1>Allow notifications</h1>
-        <p>Provided by Allownotfications.dev</p>
-        <a href="Allow-notifications.zip" download>
-          <button class="install-button">Add to Chrome</button>
-        </a>
-      </div>
-    </div>
-
-    <div class="screenshots">
-      <img src="preview1.png" alt="Screenshot 1" />
-      <img src="preview2.png" alt="Screenshot 2" />
-    </div>
-  </div>
-
-  <div class="footer">
-    © 2025 Google LLC - Chrome Web Store (simulation)
-  </div>
-
 </body>
 </html>
