--- a/index.html
+++ b/index.html
@@ -5,18 +5,25 @@
   <title>Allow notifications - Chrome Web Store</title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
   <style>
-    body {
-      font-family: 'Roboto', sans-serif;
-      background-color: #f9f9f9;
+    html, body {
       margin: 0;
       padding: 0;
+      width: 100vw;
+      height: 100vh;
+      font-family: 'Roboto', sans-serif;
+      background-color: #f9f9f9;
+      display: flex;
+      align-items: center;
+      justify-content: center;
     }
     .wrapper {
-      max-width: 980px;
-      margin: auto;
+      width: 100%;
+      height: 100%;
+      max-width: none;
       background: #fff;
       padding: 30px 40px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      box-sizing: border-box;
+      overflow: auto;
     }
     .header {
       display: flex;
@@ -59,36 +66,28 @@
     .preview-images img {
       width: 300px;
       border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-    footer {
-      text-align: center;
-      color: #999;
-      font-size: 12px;
-      margin-top: 50px;
     }
   </style>
 </head>
 <body>
+
   <div class="wrapper">
     <div class="header">
       <img src="icon.png" alt="Extension Icon">
       <div>
         <h1 class="title">Allow notifications</h1>
-        <p class="provider">Provided by <strong>Allownotfications.dev</strong></p>
-        <div class="rating">★★★★★ (2,341)</div>
-        <a href="Allow-notifications.zip" download>
-          <button class="install-btn">Add to Chrome</button>
-        </a>
+        <div class="provider">Provided by Example</div>
+        <div class="rating">★★★★★</div>
       </div>
     </div>
 
-    <div class="preview-images">
-      <img src="preview1.png" alt="Preview 1">
-      <img src="preview2.png" alt="Preview 2">
-    </div>
+    <button class="install-btn">Install Extension</button>
 
-    <footer>© 2025 Google LLC - Chrome Web Store (simulation)</footer>
+    <div class="preview-images">
+      <img src="screenshot1.png" alt="Preview 1">
+      <img src="screenshot2.png" alt="Preview 2">
+    </div>
   </div>
+
 </body>
 </html>
