--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
     <button class="install-btn">Install Extension</button>
 
     <div class="preview-images">
-      <img src="screenshot1.png" alt="Preview 1">
-      <img src="screenshot2.png" alt="Preview 2">
+      <img src="preview1.png" alt="Preview 1">
+      <img src="preview2.png" alt="Preview 2">
     </div>
   </div>
 
