--- a/index.html
+++ b/index.html
@@ -57,14 +57,17 @@
       cursor: pointer;
       margin-top: 20px;
     }
+
+    /* تعديل الصور */
     .preview-images {
       display: flex;
-      gap: 20px;
-      flex-wrap: wrap;
-      margin-top: 30px;
+      flex-direction: column; 
+      align-items: center;    
+      gap: 30px;
+      margin-top: 40px;
     }
     .preview-images img {
-      width: 300px;
+      width: 500px;           
       border-radius: 8px;
     }
   </style>
