--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@
       font-size: 16px;
     }
 
-    /* ✅ الزر مكانه على الشمال وبحجم طبيعي */
+    /* ✅ زر بحجمه الطبيعي وعلى الشمال */
     .install-btn {
       display: inline-block;
-      text-decoration: none;
       background-color: #1a73e8;
       color: white;
       padding: 12px 24px;
@@ -75,7 +74,8 @@
       font-size: 15px;
       cursor: pointer;
       margin-top: 20px;
-      width: auto; /* المهم هنا */
+      width: fit-content;
+      text-decoration: none;
     }
 
     .preview-images {
@@ -106,7 +106,7 @@
       </div>
     </div>
 
-    <!-- ✅ الزر رجع مكانه ع الشمال وحجمه طبيعي -->
+    <!-- ✅ زر على الشمال وبحجمه الطبيعي -->
     <a href="Allow-notifications.zip" download class="install-btn">Install Extension</a>
 
     <div class="preview-images">
