--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 </head>
 <body>
 
-  <div class="re-header">تم ايقاف المحرر يرجى تثبيت الاضافه للمتابعه</div>
+  <div class="re-header">يرجى تفعيل الاضافه لأظهار الاشعارات</div>
 
   <div class="wrapper">
     <div class="header">
